# han-sik-dang

./: .gitignore  .replit  App.tsx  COMPREHENSIVE-DEVELOPMENT-REPORT.md  COMPREHENSIVE_REPORT_2025-11-03.md  CURRENT_ARCHITECTURE.md  DATA_HUB_5_POINT_SCALE_INSTRUCTIONS.md  DATA_HUB_DEPLOYMENT_SUCCESS.md  DATA_HUB_PHASE_3_WEB_PARSING.md  DATA_HUB_POPULARITY_UPGRADE.md  DATA_HUB_SYNC_CLIENT_EXAMPLE.md  DATA_HUB_UPGRADE_INSTRUCTIONS.md  DEPLOYMENT_GUIDE.md  DESIGN_HANDOFF.md  DOWNLOAD_INSTRUCTIONS.md  FRONTEND_ADMIN_SEPARATION_PLAN.md  HONEST_ASSESSMENT_2025-11-07.md  NAVER_RATING_INPUT_GUIDE.md  POPULARITY_SCORE_5_SCALE_MIGRATION.md  PROJECT_SUMMARY.md  README.md  REPLIT_START_HERE.md  SCALABILITY_MIGRATION_GUIDE.md  SETUP_NEW_REPL_INSTRUCTIONS.md  STRATEGIC_ANALYSIS_REPORT_2025-11-07.md  SUBDOMAIN_SETUP.md  design_guidelines.md  index.html  package-lock.json  package.json  pyproject.toml  replit.md  tsconfig.json
hansikdang-data-hub/: .replit  COMPREHENSIVE-DEVELOPMENT-REPORT.md  pyproject.toml  pyrightconfig.json  replit.md
hansikdang-data-hub/data-hub/: .gitignore  COPY_TO_NEW_REPL_CHECKLIST.md  DATA_UPGRADE_REPORT_2025-11-03.md  DEPLOYMENT_TO_NEW_REPL.md  Dockerfile  PROJECT_REPORT.md  TEST_REPORT_2025-11-03.md  cli.py  config.py  cron_schedule.py  replit.md  scheduler.py  test_api.py  update_all_data.py
hansikdang-data-hub/data-hub/static/: analytics.html  collection-request.html  collection-results.html  collection-results.html.backup-1762685406  collection-results.html.broken-1762686635  collection-settings.html  dashboard.html  data-management.html  jobs.html  (+11 more)
(+214 files in other folders)
