[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apify-client>=2.2.1",
    "click>=8.3.0",
    "fastapi>=0.120.1",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "packaging>=25.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "schedule>=1.2.2",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]
