[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.120.1",
    "fuzzywuzzy>=0.18.0",
    "geopy>=2.4.1",
    "google-api-python-client>=2.187.0",
    "google-auth>=2.43.0",
    "google-auth-oauthlib>=1.2.2",
    "psutil>=7.1.3",
    "pydantic>=2.12.3",
    "python-levenshtein>=0.27.3",
    "python-multipart>=0.0.20",
    "pytrends>=4.9.2",
    "schedule>=1.2.2",
    "uvicorn[standard]>=0.38.0",
]
